--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,24 +16,33 @@ body {
   align-items: center; }
 
 .calc {
-  width: 380px;
-  background: teal; }
+  width: 380px; }
   .calc__display {
     background: #c4c4c4;
-    padding: 15px; }
+    padding: 0px 15px;
+    height: 60px;
+    color: #313131;
+    text-align: right;
+    border-radius: 16px 16px 0px 0px;
+    line-height: 60px; }
   .calc__actions {
+    background: #171717;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    padding: 15px; }
+    border-radius: 0px 0px 16px 16px;
+    padding: 15px 0px; }
     .calc__actions button {
-      width: 100px;
+      width: calc((380px / 3) - 40px);
       height: 35px;
       -webkit-appearance: none;
       outline: none;
       border: none;
-      margin: 5px; }
+      margin: 5px 15px; }
+    .calc__actions .blank {
+      opacity: 0; }
+    .calc__actions .action,
+    .calc__actions .operator {
+      background: #ffce00; }
