--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,26 +13,41 @@ body {
 
 .calc {
     width: 380px;
-    background: teal;
 
     &__display {
         background: #c4c4c4;
-        padding: 15px;
+        padding:0px 15px;
+        height: 60px;
+
+        color: #313131;
+        text-align: right;
+        border-radius: 16px 16px 0px 0px;
+        line-height: 60px;
     }
 
     &__actions {
+        background: #171717;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
-        padding: 15px;
+        border-radius: 0px 0px 16px 16px;
+        padding: 15px 0px;
 
         button {
-            width: 100px;
+            width: calc((380px / 3) - 40px);
             height: 35px;
             -webkit-appearance: none;
             outline: none;
             border: none;
-            margin: 5px;
+            margin: 5px 15px;
+        }
+
+        .blank {
+            opacity: 0;
+        }
+        
+        .action,
+        .operator {
+            background: #ffce00;
         }
     }
 }
